--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>uptodate</groupId>
-	<artifactId>uptodate</artifactId>
+	<groupId>org.update4j</groupId>
+	<artifactId>update4j</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>UpToDate Project</name>
+	<name>update4j</name>
 	<description>Updates and launches Java 9 modules</description>
 
 	<dependencies>
@@ -24,7 +24,7 @@
 					<release>9</release>
 					<archive>
 						<manifest>
-							<mainClass>uptodate.UpToDate</mainClass>
+							<mainClass>org.update4j.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
