--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<groupId>org.update4j</groupId>
 	<artifactId>update4j</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0-beta</version>
 	<name>update4j</name>
-	<description>Updates and launches Java 9 modules</description>
+	<description>Updates and launches Java 9+ modules</description>
+	<url>https://github.com/update4j/update4j</url>
+	
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+	
+	 <developers>
+		<developer>
+		<name>Mordechai Meisels</name>
+		<email>mordechai112@gmail.com</email>
+		<organization>update4j</organization>
+		<organizationUrl>http://update4j.org/</organizationUrl>
+		</developer>
+	</developers>
+	
+	<scm>
+        <url>https://github.com/update4j/update4j/tree/master</url>
+        <connection>scm:git:https://github.com/update4j/update4j.git</connection>
+        <developerConnection>scm:git:https://github.com:update4j/update4j.git</developerConnection>
+    </scm>
+
 
 	<dependencies>
 		<dependency>
