--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	
 	<groupId>org.update4j</groupId>
 	<artifactId>update4j</artifactId>
-	<version>1.1.0-beta</version>
+	<version>1.1.1-beta</version>
 	<name>update4j</name>
-	<description>Updates and launches Java 9+ modules</description>
+	<description>Updates and launches Java 9+ Applications</description>
 	<url>https://github.com/update4j/update4j</url>
 	
 	<licenses>
