--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,10 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.0.1</version>
+				<configuration>
+					<additionalOptions>-html5</additionalOptions>
+					<failOnError>false</failOnError>
+				</configuration>
 				<executions>
 					<execution>
 						<phase>compile</phase>
