--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ allprojects {
     dependencies {
         testCompile (
                 [group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'],
-                [group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1']
+                [group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.3.1'],
+                [group: 'org.junit-pioneer', name: 'junit-pioneer', version: '0.2.0']
         )
     }
 
