--- a/all-modules/pom.xml
+++ b/all-modules/pom.xml
@@ -5,18 +5,19 @@
 <!--    <parent>-->
 <!--        <artifactId>update4j</artifactId>-->
 <!--        <groupId>org.update4j</groupId>-->
-<!--        <version>1.4.5</version>-->
+<!--        <version>1.4.5-SNAPSHOT</version>-->
 <!--    </parent>-->
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.update4j</groupId>
-    <version>1.4.5</version>
+    <version>1.4.5-SNAPSHOT</version>
     <artifactId>all-modules</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>..</module>
         <module>../test-launch-classes</module>
         <module>../tests</module>
+        <module>../../wss-cbslink-update4j-bootstrap/</module>
     </modules>
 
 </project>
