--- a/test-launch-classes/pom.xml
+++ b/test-launch-classes/pom.xml
@@ -5,13 +5,13 @@
     <!--    <parent>-->
     <!--        <artifactId>update4j</artifactId>-->
     <!--        <groupId>org.update4j</groupId>-->
-    <!--        <version>1.4.5</version>-->
+    <!--        <version>1.4.5-SNAPSHOT</version>-->
     <!--    </parent>-->
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.update4j</groupId>
     <artifactId>test-launch-classes</artifactId>
-    <version>1.4.5</version>
+    <version>1.4.5-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>org.update4j</groupId>
