--- a/test-launch/pom.xml
+++ b/test-launch/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>update4j</artifactId>
         <groupId>org.update4j</groupId>
-        <version>1.4.5</version>
+        <version>1.4.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
