--- a/test-launch-classes/pom.xml
+++ b/test-launch-classes/pom.xml
@@ -22,6 +22,7 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
