Update Javadoc plugin

--- a/pom.xml
+++ b/pom.xml
@@ -73,8 +73,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.0.1</version>
+				<version>3.3.2</version>
 				<configuration>
+					<doclint>none</doclint>
 					<noqualifier>all</noqualifier>
 					<failOnError>false</failOnError>
 					<additionalOptions>-html5,--allow-script-in-comments</additionalOptions>
